--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-#aatasource
+#datasource
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -9,13 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-#spring 2.6+
-spring.main.allow-circular-references=true
-
-#jwt
+#jwt: will be used HMAC; for RSA we need public+private key...
 app.jwt.secret=${JWT_SECRET}
-
-#1 day at milliseconds
+#1 day
 app.jwt.expiration-in-ms=86400000
 
 authentication.internal-api-key=${INTERNAL_API_KEY}
+
+spring.main.allow-circular-references=true
